--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <body>
 
-<p><h1>hello world...</h1></p>
-
+<h1>hello world...</h1>
+<p>There are lots of things I could write here but probably won't.</p>
 
 </body>
 
