--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
-<head>
-</head>
+	<head>
 
-<body>
+	</head>
 
-<h1>hello world...</h1>
-<p>There are lots of things I could write here but probably won't.</p>
+	<body>
 
-</body>
+	<h1>hello world...</h1>
+
+	<h2>Basic Information.</h2>
+	<p>There are lots of things I could write here but probably won't.</p>
+
+	</body>
 
 </html>
 
