--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
 	<h2>Basic Information.</h2>
 	<p>There are lots of things I could write here but probably won't.</p>
+	<h3>Things I find ironic...</h3>
+
+	<ul>
+	<li>1. HTML </li>
+	<li>2. Ubuntu </li>
+	<li>3. Lists...</li>
 
 	</body>
 
