--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+	     <style>
 	h2 {
 	    color: rgb(0, 232, 15);
 	}
@@ -7,7 +8,7 @@
 	body {
 	    background-color: rgb(97, 250, 255);
 	}
-
+	     </style>
 	</head>
 
 	<body>
