--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 
-	<h1>hello world...</h1>
+	<h1>Hola Mundo!</h1>
 
 	<h2>Basic Information.</h2>
 	<p>There are lots of things I could write here but probably won't.</p>
