--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 	     <style>
 		h2 {
-		    color: rgb(0, 232, 15);
+		    color: rgb(0, 20, 15);
 		}
 
 		body {
@@ -21,7 +21,7 @@
 
 	<ul>
 	<li>1. HTML </li>
-	<li>2. Ubuntu </li>
+	<li>2. The color blue </li>
 	<li>3. Lists...</li>
 	</ul>
 	</body>
