--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 	<body>
 
 	<center>Hola Mundo!</center>
+	<center>Career Goals and such.</center>
 
+	<p>I really don't have a whole lot in mind as far as career goals, finishing 
+	   college in itself was always a major goal in my life. I really only want 
+	   to make a better life for my children, and finishing college and getting 
+	   a 'real job' seemed like the best way to do this.</p>
 	<h2>Basic Information.</h2>
 	<p>There are lots of things I could write here but probably won't.</p>
 	<h3>Things I find ironic...</h3>
