--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 
 	<center>Hola Mundo!</center>
-	<center>Career Goals and such.</center>
+	<center><h1>Career Goals and such.</h1></center>
 
 	<p>I really don't have a whole lot in mind as far as career goals, finishing 
 	   college in itself was always a major goal in my life. I really only want 
