--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 
-	<center>Hola Mundo!</center>
+	<center><h1>Jarvis Ashley</h1></center>
 	<center><h1>Career Goals and such.</h1></center>
 
 	<p>I really don't have a whole lot in mind as far as career goals, finishing 
@@ -23,7 +23,8 @@
 	
 	<h2>Basic Information.</h2>
 	<p>There are lots of things I could write here but probably won't.</p>
-	<h3>Things I find ironic...</h3>
+
+	<center><h3>Things I find ironic...</h3></center>
 
 	<ul>
 	<li>1. HTML </li>
