--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	     </style>
 	</head>
 
+
+
 	<body>
 
 	<center><h1>Jarvis Ashley</h1></center>
@@ -26,11 +28,13 @@
 
 	<center><h3>Things I find ironic...</h3></center>
 
-	<ul>
+        <center><ul>
 	<li>1. HTML </li>
 	<li>2. The color blue </li>
 	<li>3. Lists...</li>
-	</ul>
+	</ul></center>
+
+
 	</body>
 
 </html>
