--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 	<center><h3>Things I find ironic...</h3></center>
 
         <center><ul>
-	<li>1. HTML </li>
-	<li>2. The color blue </li>
-	<li>3. Lists...</li>
+	
+	<center><li>1. HTML </li></center>
+	<center><li>2. The color blue </li></center>
+	<center><li>3. Lists...</li></center>
+	
 	</ul></center>
 
 
