--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	   to make a better life for my children, and finishing college and getting 
 	   a 'real job' seemed like the best way to do this.</p>
 	
-	<h2>Basic Information.</h2>
+	<center><h2>Basic Information.</h2></center>
 	<p>There are lots of things I could write here but probably won't.</p>
 
 	<center><h3>Things I find ironic...</h3></center>
